# web_project-register

./: LICENSE  README.md  Register.py  customers.csv  pyproject.toml
pages/: 🔍 Search.py
